fix fade in on mobile

--- a/_assets/css/_partials/_layout/_scaffold.scss
+++ b/_assets/css/_partials/_layout/_scaffold.scss
@@ -187,10 +187,12 @@ body {
     }
 }
 
+
 // Fade In Animation
 .fade-in {
     animation-duration: 2s;
     animation-fill-mode: both;
+    -webkit-backface-visibility: hidden;
     @media (prefers-reduced-motion) {
         animation: none;
         opacity: 1;
